package org.pancakelab.exception;

public class InvalidPancakeOperationException extends RuntimeException {

    public InvalidPancakeOperationException(String message) {
        super(message);
    }
}
